--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xxl-6">
+
                         <p class="banner_p_top">
                             what are you waiting for ?
                         </p>
@@ -63,6 +64,7 @@
                                 </a>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -80,9 +82,6 @@
 
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <div class="container-fluid">
-
-<!--                                <a class="navbar-brand nb_style" href="#">Navbar</a>-->
-
                                 <button class="navbar-toggler but_nav_bar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
@@ -1034,10 +1033,10 @@
                             <div class="row">
 
                                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-11">
-                                    <a href="#">purchase it now</a>
+                                    <a href="#yak2" id="price" >purchase it now</a>
                                 </div>
                                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-11">
-                                    <a href="#">contact us now</a>
+                                    <a href="#yak3" id="contact">contact us now</a>
                                 </div>
                             </div>
                         </div>
@@ -1607,7 +1606,7 @@
 
         <div class="price_tables">
             <div class="container">
-                <div class="row price_tables__title">
+                <div class="row price_tables__title" id="yak2">
                     <div class="col-xxl">
                         <div class="headline_main_wrapper">
                             <div class="headline_main">
@@ -1765,7 +1764,7 @@
 
     <footer class="footer">
 
-        <div class="footer_title">
+        <div class="footer_title" id="yak3">
             <div class="container">
                 <div class="row row_logo">
                     <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-4 col-sm-4">
