--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
                 </div>
             </div>
         </div>
-
+.
         <div class="navigation">
             <div class="container">
                 <div class="row" id="yak1">
 
-                    <div class="col-xxl-3">
+                    <div class="col-xxl-3 col-xl-3 col-lg-12 col-md-6 col-sm-6 col-6">
                         <img src="images/logo.png" alt="logo">
                     </div>
 
-                    <div class="col-xxl-9">
+                    <div class="col-xxl-9 col-xl-9 col-lg-12 col-md-6 col-sm-6 col-6">
 
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <div class="container-fluid">
